Update favicon link and enhance profile image handling; improve form elements and event listeners

--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "flowbite": "^3.1.2"
   },
   "scripts": {
-    "dev": "concurrently \"npx @tailwindcss/cli -i ./static/src/style.css -o /static/src/output.css --watch\" \"python -m flask run\""
+    "app": "concurrently \"npx @tailwindcss/cli -i ./static/src/style.css -o /static/src/output.css --watch\" \"python -m flask run\""
   }
 }
